<resources>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="a_d">A.D.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac_below_horizon">Below the horizon</string>
    <string name="ac_custom_center_here">Center Here</string>
    <string name="ac_custom_connect_mount_first">Connect Mount first</string>
    <string name="ac_custom_current_pos_calculate_failed">Current position calculate failed</string>
    <string name="ac_custom_ensure_focal"><Data>Ensure Focal Length is correct and &lt;br>FOV is in the range of 0.2°-33° </Data></string>
    <string name="ac_custom_ensure_focal_pi3"><Data>Ensure Focal Length is correct and &lt;br>FOV is in the range of 0.4°-33° </Data></string>
    <string name="ac_custom_solving_and_calculate_current_pos">Solving and calculating Current Position</string>
    <string name="ac_custom_solving_fail">Solve failed, maybe clouds rolled in or too few stars</string>
    <string name="ac_dialog_ac_attempt_2">Auto-centering attempt once</string>
    <string name="ac_dialog_ac_attempt_3">Auto-centering attempt twice</string>
    <string name="ac_dialog_ac_attempt_4">Auto-centering attempt third</string>
    <string name="ac_dialog_ac_fail_attempt_2">Solving Failed, attempt once</string>
    <string name="ac_dialog_ac_fail_attempt_3">Solving Failed, attempt twice</string>
    <string name="ac_dialog_ac_fail_attempt_4">Solving Failed, attempt third</string>
    <string name="ac_dialog_ac_fail_attempt_5">Auto-center failed, retry 5th</string>
    <string name="ac_dialog_ac_failed">Auto-center failed, distance is too far</string>
    <string name="ac_dialog_ac_failed_exp">Shooting Failure</string>
    <string name="ac_dialog_ac_failed_solve">Plate Solving Failed</string>
    <string name="ac_dialog_ac_merid_flip_failed">Meridian flip failed， wait for the next Flip.</string>
    <string name="ac_dialog_ac_mount_get_coord">Failed to read the RA/DEC of the mount</string>
    <string name="ac_dialog_ac_mount_goto">Failed to slew the mount</string>
    <string name="ac_dialog_ac_mount_opt">Mount Operation Failed</string>
    <string name="ac_dialog_ac_mount_set_pierside_failed">The Pier Side is wrong</string>
    <string name="ac_dialog_ac_mount_sync">Failed to set</string>
    <string name="ac_dialog_ac_success">Auto-center succeeded</string>
    <string name="ac_dialog_ac_uncentered_attempt_1">Uncentered, retry once</string>
    <string name="ac_dialog_ac_uncentered_attempt_2">Uncentered, retry twice</string>
    <string name="ac_dialog_ac_uncentered_attempt_3">Uncentered, retry third</string>
    <string name="ac_dialog_ac_uncentered_attempt_n">Uncentered, retry %1$d th</string>
    <string name="ac_dialog_attempt_ac_ing">Uncentered, attempt to auto-center</string>
    <string name="ac_dialog_check_in_center">Validate centered or not</string>
    <string name="ac_dialog_current">Current: </string>
    <string name="ac_dialog_move_to_target_pos">Mount slews to target position</string>
    <string name="ac_dialog_target">Target: </string>
    <string name="ac_dialog_target_in_center">Target is centered</string>
    <string name="ac_downloading">Loading...</string>
    <string name="ac_flip_dialog_ac_try">Uncentered, retrying %1$d th</string>
    <string name="ac_flip_dialog_exit">Autorun will be stopped after exiting</string>
    <string name="ac_flip_dialog_exit_title">Exit Meridian Flip</string>
    <string name="ac_flip_dialog_solve_try">Solving Failed, attempt %1$d th</string>
    <string name="ac_flip_dialog_title_1">First Meridian Flip</string>
    <string name="ac_flip_dialog_title_2">Second Meridian Flip</string>
    <string name="ac_flip_dialog_title_3">3rd Meridian Flip</string>
    <string name="ac_flip_dialog_title_n">%1$dth Meridian Flip</string>
    <string name="ac_shooting">Shooting...</string>
    <string name="ac_solving">Solving...</string>
    <string name="ac_solving_with_star">Detected %1$s stars</string>
    <string name="ac_wait_flip_dialog_title_1">Wait for Meridian Flip</string>
    <string name="ac_wait_flip_dialog_title_2">Wait for the 2nd Meridian Flip</string>
    <string name="ac_wait_flip_dialog_title_3">Wait for the 3rd Meridian Flip</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_dslr_content">Set the following options before using the DSLR</string>
    <string name="dialog_dslr_content2">Turn off any power-saving and WiFi/NFC features</string>
    <string name="dialog_dslr_content3">"Current Camera doesn't support Bulb mode, the exposure limit is 30s"</string>
    <string name="dialog_dslr_k1">Shooting Mode: </string>
    <string name="dialog_dslr_k2">Image Format: </string>
    <string name="dialog_dslr_k3">RAW Bit depth: </string>
    <string name="dialog_dslr_k4">Image Size: </string>
    <string name="dialog_dslr_k5">Bracketing (BKT): </string>
    <string name="dialog_dslr_title">Camera Setting Requirements</string>
    <string name="dialog_dslr_v1">M &amp; Bulb</string>
    <string name="dialog_dslr_v2">RAW(only)</string>
    <string name="dialog_dslr_v3">Max(14bit/12bit)</string>
    <string name="dialog_dslr_v4">L</string>
    <string name="dialog_dslr_v5">Close or 0</string>
    <string name="focus_update_content">Current firmware of EAF is out of date, please use PC to download from ZWO website and upgrade</string>
    <string name="focus_update_tip">"Attention
Current FW version may work abnormally when using in temperature below 0°C and cause the failure of upgrading"</string>
    <string name="focus_update_title">EAF Firmware Update</string>
    <string name="got_it">Got it!</string>
    <string name="meridian_flip_tip_dialog_disclaimer">Please use with caution</string>
    <string name="meridian_flip_tip_dialog_main_process">Main Routine</string>
    <string name="meridian_flip_tip_dialog_main_process_1">Stop tracking x min before Meridian, default is 0 min, can be changed under Mount Settings page</string>
    <string name="meridian_flip_tip_dialog_main_process_2">Do AMF x min after Meridian, default is 5 min, can be changed under Mount Settings page</string>
    <string name="meridian_flip_tip_dialog_main_process_3">After Meridian Flip, the Tracking and Guiding will automatically resume and Autorun will continue(If the Guiding is turned on before the flip, it will be automatically turned on after the flip)</string>
    <string name="meridian_flip_tip_dialog_tips">Attention</string>
    <string name="meridian_flip_tip_dialog_tips_1">1 Please ensure your mount meridian flip settings are disabled</string>
    <string name="meridian_flip_tip_dialog_tips_2">2 Please turn off Daylight Saving Time on the mount hand control</string>
    <string name="meridian_flip_tip_dialog_tips_3">3 ASIAIR will attempt 30 times if meridian flip fails</string>
    <string name="no_remind_again">Never Remind</string>
    <string name="ok">OK</string>
    <string name="ok_all_right">OK</string>
    <string name="save">Save</string>
    <string name="solved_angle">Angle: </string>
    <string name="solved_focal_length">Focal Length: </string>
    <string name="solved_fov">FOV: </string>
    <string name="solved_title_info"><Data>Success! Solve took &lt;font color=#259B24>%1$.1f&lt;/font> Seconds</Data></string>
    <string name="str_dec_symbol">DEC: </string>
    <string name="str_ra_symbol">RA: </string>
    <string name="sync">Align Mount</string>
    <string name="sync_retry">Align &amp; GoTo</string>
    <string name="video_setting_bgm">Audio</string>
    <string name="video_setting_bgm_music">Music</string>
    <string name="video_setting_bgm_none">Mute</string>
    <string name="video_setting_exp">EXP</string>
    <string name="video_setting_exp_ms">ms</string>
    <string name="video_setting_exp_us">μs</string>
    <string name="video_setting_format">Video Format</string>
    <string name="video_setting_format_tip">MP4 will be saved on your phone and AVI(RAW) on SD Card or external storage device</string>
    <string name="video_setting_reverse_in_horizontal">Flip Horizontally</string>
    <string name="video_setting_reverse_in_vertical">Flip Vertically</string>
    <string name="video_setting_title">Video Settings</string>
    <string name="work_scene_auto_run">Autorun</string>
    <string name="work_scene_focus">Focus</string>
    <string name="work_scene_pa">PA</string>
    <string name="work_scene_plan">Plan</string>
    <string name="work_scene_preview">Preview</string>
    <string name="work_scene_stack">Live</string>
    <string name="work_scene_video">Video</string>
</resources>