<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/bg_dialog_shape_corner" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/tv_title" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:text="@string/dialog_dslr_title" style="@style/custom_dialog_text_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/divider" android:layout_below="@id/tv_title">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/dp_16" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:paddingBottom="@dimen/dp_10" android:visibility="gone" android:text="@string/dialog_dslr_content" style="@style/custom_dialog_text_content" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="right" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
                    <TextView android:textColor="@color/color_dialog_title" android:layout_gravity="right" android:id="@id/solved_ra_title" android:text="@string/dialog_dslr_k1" style="@style/custom_dialog_text_content" />
                    <TextView android:textColor="@color/color_dialog_title" android:layout_gravity="right" android:id="@id/solved_dec_title" android:layout_marginTop="@dimen/dp_5" android:text="@string/dialog_dslr_k2" style="@style/custom_dialog_text_content" />
                    <TextView android:textColor="@color/color_dialog_title" android:layout_gravity="right" android:id="@id/solved_angle_title" android:layout_marginTop="@dimen/dp_5" android:text="@string/dialog_dslr_k3" style="@style/custom_dialog_text_content" />
                    <TextView android:textColor="@color/color_dialog_title" android:layout_gravity="right" android:id="@id/solved_focal_title" android:layout_marginTop="@dimen/dp_5" android:text="@string/dialog_dslr_k4" style="@style/custom_dialog_text_content" />
                    <TextView android:textColor="@color/color_dialog_title" android:layout_gravity="right" android:id="@id/solved_bkt_title" android:layout_marginTop="@dimen/dp_5" android:text="@string/dialog_dslr_k5" style="@style/custom_dialog_text_content" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="-10.0dip" android:layout_weight="1.0">
                    <TextView android:textColor="@color/air_colorPrimary" android:layout_gravity="left" android:id="@id/solved_ra_val" android:text="@string/dialog_dslr_v1" android:lines="1" style="@style/custom_dialog_text_content" />
                    <TextView android:textColor="@color/air_colorPrimary" android:layout_gravity="left" android:id="@id/solved_dec_val" android:layout_marginTop="@dimen/dp_5" android:text="@string/dialog_dslr_v2" android:lines="1" style="@style/custom_dialog_text_content" />
                    <TextView android:textColor="@color/air_colorPrimary" android:layout_gravity="left" android:id="@id/solved_angle_val" android:layout_marginTop="@dimen/dp_5" android:text="@string/dialog_dslr_v3" android:lines="1" style="@style/custom_dialog_text_content" />
                    <TextView android:textColor="@color/air_colorPrimary" android:layout_gravity="left" android:id="@id/solved_focal_val" android:layout_marginTop="@dimen/dp_5" android:text="@string/dialog_dslr_v4" android:lines="1" style="@style/custom_dialog_text_content" />
                    <TextView android:textColor="@color/air_colorPrimary" android:layout_gravity="left" android:id="@id/solved_bkt_val" android:layout_marginTop="@dimen/dp_5" android:text="@string/dialog_dslr_v5" android:lines="1" style="@style/custom_dialog_text_content" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:padding="@dimen/dp_10" android:text="@string/dialog_dslr_content2" style="@style/custom_dialog_text_content" />
            <TextView android:id="@id/tv_dslr_bulb" android:visibility="gone" android:clickable="true" android:text="@string/dialog_dslr_content3" style="@style/custom_dialog_text_content" />
        </LinearLayout>
    </ScrollView>
    <View android:id="@id/divider" android:layout_above="@id/ll_opt" style="@style/style_15_divider_horizontal" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_opt" android:layout_width="fill_parent" android:layout_height="@dimen/dp_44" android:layout_alignParentBottom="true">
        <TextView android:textColor="@color/color_dialog_title" android:id="@id/btn_dslr_no_more" android:text="@string/no_remind_again" android:layout_weight="1.0" style="@style/custom_dialog_text_button" />
        <View style="@style/style_15_divider_vertical" />
        <TextView android:id="@id/btn_dslr_ok" android:text="@string/ok_all_right" android:layout_weight="1.0" style="@style/custom_dialog_text_button" />
    </LinearLayout>
</RelativeLayout>