<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/bg_dialog_shape_corner" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/tv_dialog_title" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:text="@string/video_setting_title" style="@style/custom_dialog_text_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/divider" android:layout_below="@id/tv_dialog_title">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout style="@style/live_setting_block">
                <TextView android:text="Bin" android:layout_alignParentLeft="true" style="@style/live_setting_text_key" />
                <com.zwoasi.asiair.view.widget.MyRadioGroup android:orientation="horizontal" android:id="@id/video_setting_bin_radios" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
                    <RadioButton android:id="@id/video_radio_bin_1" android:text="Bin1" style="@style/style_15_dark_radio_button" />
                    <RadioButton android:id="@id/video_radio_bin_2" android:text="Bin2" style="@style/style_15_dark_radio_button" />
                    <RadioButton android:id="@id/video_radio_bin_3" android:text="Bin3" style="@style/style_15_dark_radio_button" />
                    <RadioButton android:id="@id/video_radio_bin_4" android:text="Bin4" style="@style/style_15_dark_radio_button" />
                </com.zwoasi.asiair.view.widget.MyRadioGroup>
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout style="@style/live_setting_block">
                    <TextView android:text="@string/video_setting_format" android:layout_alignParentLeft="true" style="@style/live_setting_text_key" />
                    <com.zwoasi.asiair.view.widget.MyRadioGroup android:orientation="horizontal" android:id="@id/video_setting_format_radios" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
                        <RadioButton android:id="@id/video_radio_format_mp4" android:text="MP4" style="@style/style_15_dark_radio_button_no_border" />
                        <RadioButton android:id="@id/video_radio_format_avi" android:text="AVI" style="@style/style_15_dark_radio_button_no_border" />
                        <RadioButton android:id="@id/video_radio_format_all" android:layout_marginRight="@dimen/dp_0" android:text="MP4+AVI" style="@style/style_15_dark_radio_button_no_border" />
                    </com.zwoasi.asiair.view.widget.MyRadioGroup>
                </RelativeLayout>
                <TextView android:textColor="@color/color_dialog_content" android:paddingLeft="@dimen/dp_16" android:paddingTop="@dimen/dp_5" android:paddingBottom="@dimen/dp_5" android:text="@string/video_setting_format_tip" style="@style/text_setting_item_hint" />
            </LinearLayout>
            <RelativeLayout style="@style/live_setting_block">
                <TextView android:text="@string/video_setting_exp" android:layout_alignParentLeft="true" style="@style/live_setting_text_key" />
                <com.zwoasi.asiair.view.widget.MyRadioGroup android:orientation="horizontal" android:id="@id/video_setting_exp_radios" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
                    <RadioButton android:id="@id/video_radio_exp_us" android:text="@string/video_setting_exp_us" style="@style/style_15_dark_radio_button_no_border" />
                    <RadioButton android:id="@id/video_radio_exp_ms" android:layout_marginRight="@dimen/dp_0" android:text="@string/video_setting_exp_ms" style="@style/style_15_dark_radio_button_no_border" />
                </com.zwoasi.asiair.view.widget.MyRadioGroup>
            </RelativeLayout>
            <RelativeLayout style="@style/live_setting_block">
                <TextView android:text="@string/video_setting_bgm" android:layout_alignParentLeft="true" style="@style/live_setting_text_key" />
                <com.zwoasi.asiair.view.widget.MyRadioGroup android:orientation="horizontal" android:id="@id/video_setting_bgm_radios" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
                    <RadioButton android:id="@id/video_radio_bgm_off" android:text="@string/video_setting_bgm_none" style="@style/style_15_dark_radio_button_no_border" />
                    <RadioButton android:id="@id/video_radio_bgm_on" android:layout_marginRight="@dimen/dp_0" android:text="@string/video_setting_bgm_music" style="@style/style_15_dark_radio_button_no_border" />
                </com.zwoasi.asiair.view.widget.MyRadioGroup>
            </RelativeLayout>
            <RelativeLayout style="@style/live_setting_block">
                <TextView android:text="@string/video_setting_reverse_in_horizontal" android:layout_alignParentLeft="true" style="@style/live_setting_text_key" />
                <com.zwoasi.asiair.view.widget.MySwitch android:id="@id/video_setting_horizontal_switch" android:layout_height="wrap_content" android:layout_alignParentEnd="true" style="@style/switch_ios_style" />
            </RelativeLayout>
            <RelativeLayout style="@style/live_setting_block">
                <TextView android:text="@string/video_setting_reverse_in_vertical" android:layout_alignParentLeft="true" style="@style/live_setting_text_key" />
                <com.zwoasi.asiair.view.widget.MySwitch android:id="@id/video_setting_vertical_switch" android:layout_height="wrap_content" android:layout_alignParentEnd="true" style="@style/switch_ios_style" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <View android:id="@id/divider" android:layout_marginTop="@dimen/dp_5" android:layout_above="@id/ll_opt" style="@style/style_15_divider_horizontal" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_opt" android:layout_width="fill_parent" android:layout_height="@dimen/dp_44" android:layout_alignParentBottom="true">
        <TextView android:textColor="@color/color_dialog_title" android:id="@id/dialog_negative_btn" android:text="@string/cancel" android:layout_weight="1.0" style="@style/custom_dialog_text_button" />
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_ok" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <View style="@style/style_15_divider_vertical" />
            <TextView android:id="@id/dialog_positive_btn" android:text="@string/save" style="@style/custom_dialog_text_button" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>